fix national logo size and spacing between menu items

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1083,7 +1083,7 @@ div.search-input-group {
     #header .header-links>ul>li{
       font-size: 13px;
       color: #bebebe;
-      padding: 50px 25px 15px 25px
+      padding: 50px 28px 15px 0px
     }
 
     #header .menu>li>a {
